--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "node-mailjet": "^6.0.5",
+    "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12",
